--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -27,7 +27,7 @@
         </div>
     </div>
     </div>
-    <footer th:replace="fragments :: footer"></footer>
+    <footer th:replace="fragments/fragments :: footer"></footer>
     </body>
     </html>
 
