--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -1,13 +1,13 @@
  <!DOCTYPE html>
   <html lang="en" xmlns:th="http://www.thymeleaf.org">
-  <head th:replace="fragments :: head"></head>
+  <head th:replace="fragments/fragments :: head"></head>
   <head><link href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet" crossorigin="anonymous"></head>
   <body style="padding: 0">
-  <div th:replace="fragments :: navbar" ></div>
+  <div th:replace="fragments/fragments :: navbar"></div>
  
   <main role="main">
       <div class="container">
-          <form class="form-signin" th:action="@{/signin}" method="post">
+          <form class="form-signin" action="#" th:action="@{/signin}" method="post">
               <h2 class="form-signin-heading" style="text-align: center">Please Sign In/Up</h2>
               <p>
                   <label for="username" class="sr-only">Username</label>
@@ -25,7 +25,7 @@
       </div>
   </main>
  
-  <div th:replace="fragments :: footer"></div>
+  <footer th:replace="fragments/fragments :: footer"></footer>
   </body>
   </html>
 
