--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -1,14 +1,14 @@
 <!DOCTYPE HTML>
     <html xmlns:th="http://www.thymeleaf.org" lang="en">
-    <head th:replace="fragments :: head"></head>
+    <head th:replace="fragments/fragments :: head"></head>
     <body>
-    <div th:replace="fragments :: navbar" ></div>
+    <div th:replace="fragments/fragments  :: navbar" ></div>
  
     <div class="container">
         <div class="card mb-3 large-product-card">
             <div class="row no-gutters">
                 <div class="col-md-6">
-                    <img th:alt="${product.name}" th:src="@{${product.image}}" class="card-img" style="max-height: 100%; object-fit: cover;" />
+                    <img th:alt="${product.name}" th:src="@{/} + ${product.image}" class="card-img" style="max-height: 100%; object-fit: cover;" />
                 </div>
             <div class="col-md-4">
                 <div class="card-body">
